# ocap-dcv

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
owa-env-gst/: README.md  environment.yml  pyproject.toml
owa-env-gst/examples/: run_appsink_recorder.py  run_gst_pipeline_runner.py
owa-env-gst/scripts/: benchmark_screen_captures.py  benchmark_video_reader.py  verify_data.py
owa-env-gst/tests/: conftest.py  test_gst_factory.py  test_recorder.py  test_screen_capture.py  test_screen_listener.py
owa/ocap/: recorder.py
owa/ocap/gst/: __init__.py
owa/ocap/gst/gst-plugins/python/: py_utctimestampsrc.py
owa/ocap/gst/gst_runner/: __init__.py  extensions.py  gst_runner.py
owa/ocap/gst/omnimodal/: __init__.py  appsink_recorder.py
owa/ocap/gst/pipeline_builder/: __init__.py  element.py  factory.py  pipeline.py
owa/ocap/gst/utils/: __init__.py  gst_lifecycle.py  gst_sample_postprocess.py  misc.py
owa/ocap/plugins/: __init__.py  gst.py
tests/: test_recorder.py
