[project]
name = "ocap"
version = "0.6.2.post1"
description = "High-performance, omnimodal desktop recorder for Windows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "mcap-owa-support==0.6.2",
    "mediaref",
    "owa-cli==0.6.2",  # not needed for ocap but for convenience on CLI. Installs two package additionally: owa-cli, plotext
    "owa-core==0.6.2",
    "owa-env-desktop==0.6.2",
    "owa-env-gst==0.6.2",
    "owa-msgs==0.6.2",
    "tqdm",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "virtual-uv>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[project.scripts]
ocap = "owa.ocap.recorder:main"
ocap-stop = "owa.ocap.recorder:stop"

[tool.pytest.ini_options]
testpaths = ["tests"]
