[project]
name = "ocap"
version = "0.6.2.post1"
description = "High-performance, omnimodal desktop recorder for Windows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "mcap-owa-support==0.6.2",
    "mediaref",
    "owa-cli==0.6.2",  # not needed for ocap but for convenience on CLI. Installs two package additionally: owa-cli, plotext
    "owa-core==0.6.2",
    "owa-env-desktop==0.6.2",
    "owa-msgs==0.6.2",
    "tqdm",
    "typer>=0.20.0",
    "numpy>=2.0",
    "opencv-python",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "virtual-uv>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[project.scripts]
ocap = "owa.ocap.recorder:main"

[project.entry-points."owa.env.plugins"]
gst = "owa.ocap.plugins.gst:plugin_spec"

[tool.pytest.ini_options]
testpaths = ["tests"]
